# extradict

./: .gitignore  MANIFEST.in  README.md  lista_palavras.txt  pyproject.toml  setup.py  version_dict.py
.github/workflows/: pypi.yml  python-app.yml
extradict/: __init__.py  binary_tree_dict.py  blobdict.py  double_dict.py  extratuple.py  grouper.py  map_getter.py  misc.py  multi_processing_dict.py  nested_data.py  normalized_dict.py  orderable_mapping.py  orderedset.py  reciprocal_dict.py  trie.py  version_dict.py
performance/: extratuple.py  getfullsize.py  trie.py
tests/: test_bijective.py  test_blob_dict.py  test_blob_text_dict.py  test_grouper.py  test_map_getter.py  test_mappings.py  test_namedtuple.txt  test_nested_data.py  test_normalized.py  test_orderable_mapping.py  test_ordered_set.py  test_tree.py  test_trie.py  test_version_dict.py  test_version_dict.txt
