[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "extradict"
authors = [
    {name = "João S. O. Bueno", email = "gwidion@gmail.com"},
]
description = "Extra mapping utilities for Python"
readme = "README.rst"
requires-python = ">=3.8"
keywords = []
license = {text = "LGPLv3.0"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []
dynamic = ["version"]



# ... other project metadata fields as listed in:
#     https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
